--- a/app/views/casein/home/index.html.erb
+++ b/app/views/casein/home/index.html.erb
@@ -3,6 +3,10 @@
 <li><b><%= link_to "Event".html_safe, casein_events_path %></b></li>
 </div>
 
+<div id="spinner_img" style="display: none;">
+				<img src="/casein/images/loading.gif" width="100%" height="100%" border="0" alt="logo"></img>
+</div>
+			
 <div id="repl_ele"></div>
 
 
@@ -13,10 +17,15 @@ $(document).ready(function() {
 $('#artice_id').click(function(){	  	  
 		$.ajax({
 			url:'/casein/articles',			
-			type: "GET"        
+			type: "GET",
+			complete : function(){
+				$("#spinner_img img").hide();
+				$("#spinner_img").trigger('close');			
+			}
 			});
       return false;		
 	});	
+	
 });
 
 </script>
