--- a/app/views/casein/comments/index.html.erb
+++ b/app/views/casein/comments/index.html.erb
@@ -25,7 +25,8 @@
 <p><b><%= link_to 'Add new comment', "#",:id => "new_comment" %></b></p>
 
 <div id="form_comment" style="display: none;">
-	<fieldset>     
+	<fieldset>
+  <a href="#"><img src="/casein/images/lightbox-close.png" alt="close icon" height="42" width="42" id="lightbox-close"></a>
 	<dl>
 	<dt><label for="email">Add your comment:</label></dt>
 	<dd> 
