--- a/app/views/casein/layouts/_left_navigation.html.erb
+++ b/app/views/casein/layouts/_left_navigation.html.erb
@@ -7,3 +7,18 @@
 <li id="visitSite"><%= link_to "Customers", casein_customers_path %></li>
 <li id="visitSite"><%= link_to "Facebook", login_page_casein_facebook_index_path %></li>
 
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-37472846-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
