--- a/app/views/casein/articles/index.js.erb
+++ b/app/views/casein/articles/index.js.erb
@@ -1,3 +1,6 @@
 $('#repl_ele').html("<%= escape_javascript(render('arti_index')) %>");
 $('.pagination a').attr('data-remote', 'true');
 $("#rightBar").html('<div class="spacer"></div><ul><li><a href="/casein/articles/new"><div class="icon"><img src="/casein/images/icons/add.png" alt=""></div>Add a new article </a></li></ul>');
+<% if @article_msg %>
+alert("<%= j @article_msg %>");
+<% end %>
