--- a/app/views/casein/home/index.html.erb
+++ b/app/views/casein/home/index.html.erb
@@ -1,31 +1,13 @@
 <div id="home_ele">
 <li><b><%= link_to "Article".html_safe,"#",:id=>"artice_id" %></b></li>
 <li><b><%= link_to "Event".html_safe, casein_events_path %></b></li>
+<li><b><%= link_to "Post".html_safe, casein_posts_path %></b></li>
 </div>
 
-<div id="spinner_img" style="display: none;">
-				<img src="/casein/images/loading.gif" width="100%" height="100%" border="0" alt="logo"></img>
-</div>
+<%= render :partial => 'casein/articles/spinner' %>
 			
 <div id="repl_ele"></div>
 
 
 
 
-<script>
-$(document).ready(function() {
-$('#artice_id').click(function(){	  	  
-		$.ajax({
-			url:'/casein/articles',			
-			type: "GET",
-			complete : function(){
-				$("#spinner_img img").hide();
-				$("#spinner_img").trigger('close');			
-			}
-			});
-      return false;		
-	});	
-	
-});
-
-</script>
