--- a/app/views/casein/customers/_form.html.erb
+++ b/app/views/casein/customers/_form.html.erb
@@ -23,6 +23,7 @@
 
 <div class="tfContainer tfContainerSecond">
 	<%= casein_text_field f, f.object, :email %>
+	<%= casein_text_field f, f.object, :email_confirmation %>	
 </div>
 
 <div class="tfContainer">
@@ -35,5 +36,9 @@
 
 <div class="tfContainer">
 <%= casein_file_field f, f.object,:customer,:photo %></div>
+
+<div class="tfContainer tfContainerSecond">
+	<%= casein_check_box f, f.object, :terms_of_service %>
+</div>
 
 <div class="clearer"></div>
