customer form has been modified

--- a/app/views/casein/customers/_form.html.erb
+++ b/app/views/casein/customers/_form.html.erb
@@ -38,7 +38,7 @@
 <%= casein_file_field f, f.object,:customer,:photo %></div>
 
 <div class="tfContainer tfContainerSecond">
-	<%= casein_check_box f, f.object, :terms_of_service %>
+	<%#= casein_check_box f, f.object, :terms_of_service %>
 </div>
 
 <div class="clearer"></div>
